# storynode

./: .gitignore  CLAUDE.md  README.md  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  deploy-pages.yml  release.yml
editor/: index.html  package-lock.json  package.json  vite.config.ts
editor/src/: App.module.css  App.tsx  main.tsx  vite-env.d.ts
editor/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
editor/src-tauri/capabilities/: default.json
editor/src-tauri/resources/player/: storynode-player-macos
editor/src-tauri/src/: lib.rs
editor/src/config/: dataHandles.ts
editor/src/hooks/: useKeyboardShortcuts.ts  useUnsavedChangesWarning.ts
editor/src/i18n/: index.ts  translations.ts
editor/src/stores/: canvasStore.ts  (+5 more)
player/: index.html  package.json  vite.config.ts
player/src/: main.ts
player/src-tauri/: Cargo.toml  tauri.conf.json
player/src-tauri/capabilities/: default.json
player/src-tauri/src/: lib.rs  main.rs
projects/: .gitkeep
shared/game-engine/: README.md  package.json  tsconfig.json
src/: App.module.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/config/: dataHandles.ts
src/hooks/: useAutoSave.ts  useKeyboardShortcuts.ts  useUnsavedChangesWarning.ts
src/i18n/: translations.ts  useTranslation.ts
src/stores/: canvasStore.ts  editorStore.ts  gameStore.ts  searchStore.ts  settingsStore.ts
src/types/: editor.ts  game.ts  story.ts
src/utils/: autoLayout.ts  fileUtils.ts  gamePlayerTemplate.ts  highlight.tsx  nestedProperty.ts
(+168 files in other folders)
