[package]
name = "storynode-editor"
version = "0.1.0"
description = "Node-based Visual Novel / Interactive Story Editor"
authors = ["painh"]
edition = "2021"

[lib]
name = "storynode_editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api", "devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2.4.2"
base64 = "0.22"

